// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addColumnToRows default 1`] = `
Array [
  Array [
    Object {
      "colSpan": 1,
      "column": Object {
        "key": "1",
      },
      "columnChainLength": 1,
      "columns": Array [
        Object {
          "key": "1",
        },
      ],
    },
  ],
]
`;

exports[`addColumnToRows group 1 column 1`] = `
Array [
  Array [
    Object {
      "colSpan": 1,
      "column": Object {
        "columnsKeys": Array [
          "1",
        ],
        "key": "group1",
      },
      "columnChainLength": 2,
      "columns": Array [
        Object {
          "key": "1",
        },
      ],
    },
  ],
  Array [
    Object {
      "colSpan": 1,
      "column": Object {
        "key": "1",
      },
      "columnChainLength": 2,
      "columns": Array [
        Object {
          "key": "1",
        },
      ],
    },
  ],
]
`;

exports[`addColumnToRows group 1 column and 1 column 1`] = `
Array [
  Array [
    Object {
      "colSpan": 1,
      "column": Object {
        "key": "2",
      },
      "columnChainLength": 1,
      "columns": Array [
        Object {
          "key": "2",
        },
      ],
    },
  ],
]
`;

exports[`getChain group 1 column 1`] = `
Array [
  Object {
    "columnsKeys": Array [
      "1",
    ],
    "key": "group1",
  },
  Object {
    "key": "1",
  },
]
`;

exports[`getRowsWithGroupedColumns default 1`] = `
Array [
  Array [
    Object {
      "colSpan": 1,
      "column": Object {
        "key": "1",
      },
      "columnChainLength": 1,
      "columns": Array [
        Object {
          "key": "1",
        },
      ],
      "rowSpan": 1,
    },
  ],
]
`;

exports[`getRowsWithGroupedColumns group 1 column 1`] = `
Array [
  Array [
    Object {
      "colSpan": 1,
      "column": Object {
        "columnsKeys": Array [
          "1",
        ],
        "key": "group1",
      },
      "columnChainLength": 2,
      "columns": Array [
        Object {
          "key": "1",
        },
      ],
      "rowSpan": 1,
    },
  ],
  Array [
    Object {
      "colSpan": 1,
      "column": Object {
        "key": "1",
      },
      "columnChainLength": 2,
      "columns": Array [
        Object {
          "key": "1",
        },
      ],
      "rowSpan": 1,
    },
  ],
]
`;

exports[`getRowsWithGroupedColumns group 1 column and 1 column 1`] = `
Array [
  Array [
    Object {
      "colSpan": 1,
      "column": Object {
        "columnsKeys": Array [
          "1",
        ],
        "key": "group1",
      },
      "columnChainLength": 2,
      "columns": Array [
        Object {
          "key": "1",
        },
      ],
      "rowSpan": 1,
    },
    Object {
      "colSpan": 1,
      "column": Object {
        "key": "2",
      },
      "columnChainLength": 1,
      "columns": Array [
        Object {
          "key": "2",
        },
      ],
      "rowSpan": 2,
    },
  ],
  Array [
    Object {
      "colSpan": 1,
      "column": Object {
        "key": "1",
      },
      "columnChainLength": 2,
      "columns": Array [
        Object {
          "key": "1",
        },
      ],
      "rowSpan": 1,
    },
  ],
]
`;

exports[`getRowsWithGroupedColumns group 2 columns in differnt places and 1 column between them 1`] = `
Array [
  Array [
    Object {
      "colSpan": 1,
      "column": Object {
        "columnsKeys": Array [
          "group1",
        ],
        "key": "group2",
      },
      "columnChainLength": 3,
      "columns": Array [
        Object {
          "key": "1",
        },
      ],
      "rowSpan": 1,
    },
    Object {
      "colSpan": 1,
      "column": Object {
        "key": "2",
      },
      "columnChainLength": 1,
      "columns": Array [
        Object {
          "key": "2",
        },
      ],
      "rowSpan": 3,
    },
    Object {
      "colSpan": 1,
      "column": Object {
        "columnsKeys": Array [
          "group1",
        ],
        "key": "group2",
      },
      "columnChainLength": 3,
      "columns": Array [
        Object {
          "key": "3",
        },
      ],
      "rowSpan": 1,
    },
  ],
  Array [
    Object {
      "colSpan": 1,
      "column": Object {
        "columnsKeys": Array [
          "1",
          "3",
        ],
        "key": "group1",
      },
      "columnChainLength": 3,
      "columns": Array [
        Object {
          "key": "1",
        },
      ],
      "rowSpan": 1,
    },
    Object {
      "colSpan": 1,
      "column": Object {
        "columnsKeys": Array [
          "1",
          "3",
        ],
        "key": "group1",
      },
      "columnChainLength": 3,
      "columns": Array [
        Object {
          "key": "3",
        },
      ],
      "rowSpan": 1,
    },
  ],
  Array [
    Object {
      "colSpan": 1,
      "column": Object {
        "key": "1",
      },
      "columnChainLength": 3,
      "columns": Array [
        Object {
          "key": "1",
        },
      ],
      "rowSpan": 1,
    },
    Object {
      "colSpan": 1,
      "column": Object {
        "key": "3",
      },
      "columnChainLength": 3,
      "columns": Array [
        Object {
          "key": "3",
        },
      ],
      "rowSpan": 1,
    },
  ],
]
`;
